--- a/.github/workflows/hasura-cloud-preview-app.yml
+++ b/.github/workflows/hasura-cloud-preview-app.yml
@@ -1,4 +1,4 @@
-name: 'preview-apps'
+name: "preview-apps"
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hasura/hasura-cloud-preview-apps@v0.1.4
         with:
-          name: "preview-samp-home-food-${{github.env.GITHUB_HEAD_REF}}${{github.event.number}}"
+          name: "preview-2-samp-home-food-${{github.env.GITHUB_HEAD_REF}}${{github.event.number}}"
           postgresDBConfig: |
             POSTGRES_SERVER_CONNECTION_URI=${{secrets.POSTGRES_SERVER_CONNECTION_URI}}
             PG_ENV_VARS_FOR_HASURA=PG_DB_URL_1,PG_DB_URL_2,PG_DB_URL_3
@@ -28,7 +28,7 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
           id: preview_app_comment
           number: ${{github.event.number}}
-          repository: ${{env.GITHUB_REPOSITORY}}
+          repository: "${{env.GITHUB_REPOSITORY}}"
           message: |
             Console URL available at ${{steps.hasura_cloud_preview.outputs.consoleURL}}
             GraphQL Endpoint available at ${{steps.hasura_cloud_preview.outputs.graphQLEndpoint}}
